Home link problem rectified

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 
 <body>
-    <div class="home">
+    <div id="home">
         <div class="headermain">
             <div class="lheader">ADERSH</div>
             <div class="header">
-                <a class="a1" href=""><strong>HOME</strong></a>
+                <a class="a1" href="#home"><strong>HOME</strong></a>
                 <a class="a1" href="#about"><strong>ABOUT</strong></a>
                 <a class="a1" href="#projects"><strong>PROJECTS</strong></a>
                 <a class="a1" href="#skills"><strong>SKILLS</strong></a>
