--- a/index.html
+++ b/index.html
@@ -280,12 +280,12 @@
             <h1>CONTACT</h1>
             <div class="line"></div>
         </div>
-        <form action="" onsubmit="validation(event)">
-            <input type="text" placeholder="Enter your name">
-            <input type="email" placeholder="Enter your email">
-            <textarea name="" placeholder="Enter your queries"></textarea>
+        <form action="https://formspree.io/f/xldpbwbz" onsubmit="validation(event)" method="post">
+            <input type="text" placeholder="Enter your name" name="name">
+            <input type="email" placeholder="Enter your email" name="email">
+            <textarea name="" placeholder="Enter your queries" name="query"></textarea>
             <span id="err"></span>
-            <button>Submit</button>
+            <button type="submit">Submit</button>
         </form>
     </div>
     <footer>
