form submission problem resolved

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             <h1>CONTACT</h1>
             <div class="line"></div>
         </div>
-        <form action="https://formspree.io/f/xldpbwbz" onsubmit="validation(event)" method="post">
+        <form action="https://formspree.io/f/xldpbwbz"  method="post">
             <input type="text" placeholder="Enter your name" name="name">
             <input type="email" placeholder="Enter your email" name="email">
             <textarea name="" placeholder="Enter your queries" name="query"></textarea>
