--- a/index.html
+++ b/index.html
@@ -281,9 +281,9 @@
             <div class="line"></div>
         </div>
         <form action="https://formspree.io/f/xldpbwbz"  method="post">
-            <input type="text" placeholder="Enter your name" name="name">
-            <input type="email" placeholder="Enter your email" name="email">
-            <textarea name="" placeholder="Enter your queries" name="query"></textarea>
+            <input type="text" placeholder="Enter your name:" name="name">
+            <input type="email" placeholder="Enter your email:" name="email">
+            <textarea name="message" placeholder="Enter your queries:"></textarea>
             <span id="err"></span>
             <button type="submit">Submit</button>
         </form>
